--- a/compa-webpage/src/App.css
+++ b/compa-webpage/src/App.css
@@ -1,17 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 .App {
-  font-family: Nunito;
   text-align: center;
 }
 
 .App-header {
-  background-color: rgb(0, 0, 0, 0.5);
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: rgb(247, 236, 236);
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
