--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -23,7 +23,7 @@ ul {
 @import './components/allies';
 @import './components/cards';
 @import './components/footer';
-@import './components/heroSection';
+@import './components/title';
 @import './components/navbar';
 @import './components/team';
 @import './components/colombianMap';
