--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -28,6 +28,9 @@ ul {
 @import './components/team';
 @import './components/colombianMap';
 @import './components/modal';
+@import './components/carousel';
+@import './components/contact';
+@import './components/services';
 
 // Pages
 @import './pages/home';
