--- a/compa-webpage/src/styles/components/_allies.scss
+++ b/compa-webpage/src/styles/components/_allies.scss
@@ -1,47 +1,18 @@
 .allies {
-  padding: 3rem;
-  background: #fff;
-}
-
-.myswiper {
-  padding: 100px !important;
-  text-align: -webkit-center;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  padding: 100px;
-}
-
-.swiper-slide {
-  text-align: -webkit-center;
-  font-size: 18px;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
+  padding-top: 50px;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
+  flex-direction: column;
   align-items: center;
-}
+  background-color: #52D766;
+  text-align: center;
 
-.swiper-slide img {
-  display: block;
-  height: 100px;
-  object-fit: cover;
-}
+  h3 {
+    font-size: 60px;
+  }
 
-@media screen and (max-width: 960px) {
-  .swiper-slide img {
-    // width: 100%;
-    height: 100%;
+  p {
+    width: 55%;
+    font-size: 25px;
+    color: white;
   }
 }
