--- a/compa-webpage/src/styles/pages/_home.scss
+++ b/compa-webpage/src/styles/pages/_home.scss
@@ -1,7 +1,20 @@
-.header-navbar {
+.home {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: red;
+}
+
+
+.home-text {
+    margin: 80px;
+    text-align: center;
+    place-self: center;
+    font-size: 60px;
+    width: 80%;
+
+    span {
+        color: white;
+        background-color: #52D766;
+        padding: 0 10px;
+        border-radius: 25px;
+    }
 }
