--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -31,6 +31,9 @@ ul {
 @import './components/carousel';
 @import './components/contact';
 @import './components/services';
+@import './components/projects';
+@import './components/aboutUs';
+@import './components/videoSection';
 
 // Pages
 @import './pages/home';
