--- a/compa-webpage/src/styles/components/_title.scss
+++ b/compa-webpage/src/styles/components/_title.scss
@@ -1,45 +1,33 @@
 .title {
-  height: 100vh;
-  width: 100%;
+  height: 80vh;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  // box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  align-items: flex-start;
   background: white;
-  object-fit: contain;
-}
-  
-.title > h1 {
-  color: black;
-  font-size: 100px;
-  margin-top: -100px;
-}
-  
-.title > p {
-  margin-top: 8px;
-  color: black;
-  font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-}
-  
-@media screen and (max-width: 960px) {
-  .title > h1 {
-    font-size: 70px;
-    margin-top: -150px;
-  }
-}
-  
-@media screen and (max-width: 768px) {
-  .title > h1 {
-    font-size: 50px;
-    margin-top: -100px;
+  margin-left: 20%;
+  line-height: 70px;
+
+  p {
+    font-size: 60px;
+    margin-bottom: 30px;
+    
+    span {
+      color: white;
+      background-color: #52D766;
+      padding: 0 10px;
+      border-radius: 25px;
+    }
   }
 
-  .title > p {
-    text-align: center;
-    font-size: 30px;
+  h1 {
+    font-size: 50px;
+
+    span {
+      text-decoration: underline #52D766;
+    }
   }
 }
+
   
