--- a/compa-webpage/src/styles/components/_contact.scss
+++ b/compa-webpage/src/styles/components/_contact.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 8% 15%;
+    padding: 6% 15%;
 
     div {
         margin: 30px;
@@ -25,16 +25,17 @@
     }
 
     button {
-        margin-top: 20px;
-        color: black;
-        background: transparent;
+        box-shadow: 0 20px 25px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        font-size: 20px;
+        color: white;
+        background: black;
         padding: 15px;
-        width: 150px;
+        width: 250px;
         border-radius: 25px;
-        border: solid 1px black;
-
+        border: none;
+        margin-top: 20px;
         &:hover {
-            cursor: pointer;
+          cursor: pointer;
         }
-    }
+      }
 }
