--- a/compa-webpage/src/styles/components/_videoSection.scss
+++ b/compa-webpage/src/styles/components/_videoSection.scss
@@ -1,7 +1,8 @@
 .video {
+    border-radius: 15px;
     background: grey;
-    width: 70%;
-    height: 400px;
+    width: 90%;
+    height: 800px;
     place-self: center;
     text-align: center;
     margin-bottom: 80px;
