--- a/compa-webpage/src/styles/components/_aboutUs.scss
+++ b/compa-webpage/src/styles/components/_aboutUs.scss
@@ -35,6 +35,7 @@
     color: black;
     background: #52D766;
     padding: 15px;
+    // width: 60%;
     width: 250px;
     border-radius: 25px;
     border: none;
