--- a/compa-webpage/src/styles/components/_services.scss
+++ b/compa-webpage/src/styles/components/_services.scss
@@ -43,8 +43,8 @@
       align-items: center;
 
       height: 100%;
-      height: 450px;
-      padding: 4% 5%;
+      height: 410px;
+      padding: 4% 4%;
       text-align: center;
 
       // border: #52D766 2px solid;
@@ -62,6 +62,7 @@
 
       p {
         text-align: justify;
+        margin-top: 6px;
       }
 
       div {
