--- a/compa-webpage/src/styles/components/_services.scss
+++ b/compa-webpage/src/styles/components/_services.scss
@@ -57,12 +57,12 @@
 
       h2 {
         // color: rgb(82, 215, 102, 0.1);
-        margin-bottom: 15%;
+        margin-bottom: 10%;
       }
 
       p {
         text-align: justify;
-        margin-top: 6px;
+        margin-top: 5%;
       }
 
       div {
