--- a/compa-webpage/src/styles/components/_projects.scss
+++ b/compa-webpage/src/styles/components/_projects.scss
@@ -24,7 +24,7 @@
       line-height: 90px;
     }
 
-    button {
+    a {
       box-shadow: 0 20px 25px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
       font-size: 20px;
       color: black;
@@ -34,6 +34,10 @@
       border-radius: 25px;
       border: none;
       margin-top: 20px;
+      font-weight: 550;
+      text-align: center;
+      text-decoration: none;
+
       &:hover {
         cursor: pointer;
       }
