--- a/compa-webpage/src/styles/components/_title.scss
+++ b/compa-webpage/src/styles/components/_title.scss
@@ -6,18 +6,11 @@
   justify-content: center;
   align-items: flex-start;
   margin-left: 12%;
-  line-height: 90px;
+  line-height: 100px;
 
   p {
     font-size: 80px;
     margin-bottom: 30px;
-    
-    span {
-      color: white;
-      background-color: #52D766;
-      padding: 0 10px;
-      border-radius: 25px;
-    }
   }
 
   h1 {
@@ -38,22 +31,15 @@
   }
   
   .contenedor-texto {
-    /* border: 2px solid #4CAF50; Borde verde */
-    border-radius: 50px; /* Redondea los bordes y las esquinas */
-    padding:  5px 20px;
-    height: 80px;
-    /* max-width: 400px; */
-    min-width: 80px;
-    width: 0; /* Inicia con ancho cero */
-    box-sizing: border-box;
-    white-space: nowrap;
-    overflow: hidden;
-    text-align: left;
-    direction: ltr; /* Cambia la dirección de texto de izquierda a derecha */
-    transition: width 2s ease, color 2s ease; /* Ajusta la duración de las transiciones */
-    background-color: #52D766; /* Fondo verde para el contenedor */
-    color: rgba(255, 255, 255, 0.3); /* Texto blanco opaco */
-    margin-right: 20px; /* Espacio entre el contenedor y el borde derecho */
+    display: block;
+    background-color: #52D766;
+    z-index: 1;
+    width: 166%;
+    margin-left: -20%;
+    text-indent: 12%;
+    color: #fff;
   }
+
+
 }
 
