Remoción link video y adición palabra title

--- a/compa-webpage/src/styles/components/_videoSection.scss
+++ b/compa-webpage/src/styles/components/_videoSection.scss
@@ -3,6 +3,7 @@
     height: 690px;
 }
 .container-vid{
+    background-color: grey;
     border-radius: 15px;
     place-self: center;
     text-align: center;
