--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -34,9 +34,12 @@ ul {
 @import './components/projects';
 @import './components/aboutUs';
 @import './components/videoSection';
+@import './components/formSection';
+@import './components/input';
 
 // Pages
 @import './pages/home';
 @import './pages/agro';
 @import './pages/tech';
 @import './pages/loading';
+@import './pages/contactpage';
