--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -32,6 +32,7 @@ ul {
 @import './components/contact';
 @import './components/services';
 @import './components/projects';
+@import './components/projectsResponsive';
 @import './components/aboutUs';
 @import './components/videoSection';
 @import './components/formSection';
