--- a/compa-webpage/src/styles/components/_contact.scss
+++ b/compa-webpage/src/styles/components/_contact.scss
@@ -1,41 +1,57 @@
 .contact {
-    background-color: #52D766;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 6% 15%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7vh 12%;
+  background-color: #52D766;
+  width: 100%;
 
-    div {
-        margin: 30px;
-    }
+  p {
+    font-size: 60px;
+    width: 60%;
+    padding: 0;
+    margin: 0;
+    color: white;
+    font-weight: bold;
+  }
 
-    h2 {
-        font-size: 60px;
-        width: 50%;
-        padding: 0;
-        margin: 0;
-        line-height: 50px;
+  a {
+    display: block;
+    box-shadow: 0 20px 25px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    font-size: 20px;
+    color: black;
+    background: white;
+    padding: 15px;
+    width: 250px;
+    border-radius: 25px;
+    border: none;
+    font-weight: 550;
+    text-align: center;
+    text-decoration: none;
+
+    &:hover {
+      cursor: pointer;
     }
+  }
+}
+
+// QUERY PARAMS
+
+@media screen and (max-width: 800px) {
+  .contact {
+    padding: 7vh 5%;
+    flex-direction: column;
 
     p {
-        font-size: 30px;
-        color: white;
+      text-align: center;
+      font-size: 40px;
+      width: 100%;
+      padding-bottom: 7vh;
     }
 
-    button {
-        box-shadow: 0 20px 25px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-        font-size: 20px;
-        color: white;
-        background: black;
-        padding: 15px;
-        width: 250px;
-        border-radius: 25px;
-        border: none;
-        margin-top: 20px;
-        &:hover {
-          cursor: pointer;
-        }
-      }
+    a {
+      font-size: 30px;
+    }
+  }
 }
