--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -28,6 +28,7 @@ ul {
 @import './components/team';
 @import './components/colombianMap';
 @import './components/modal';
+@import './components/carouselProjects';
 @import './components/carousel';
 @import './components/contact';
 @import './components/services';
