--- a/compa-webpage/src/styles/components/_projectsResponsive.scss
+++ b/compa-webpage/src/styles/components/_projectsResponsive.scss
@@ -1,4 +1,4 @@
-.projects {
+.projectsResponsive {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,52 +52,16 @@
     flex-direction: row;
     justify-content: end;
     align-items: center;
-    width: 100%;
+    width: 100vw;
 
-    ul {
-      box-shadow: 0 20px 25px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-      background-color: white;
-      transform: translate(90px, 0);
-      border-radius: 15px;
-      padding: 60px;
-      width: 60%;
-
-      .machine-title {
-        font-size: 35px;
-      }
-
-      .machine-desc {
-        margin-top: 20px;
-        text-align: justify;
-        font-size: 20px;
-        line-height: 30px
-      }
-
-      li {
-        margin: 50px 10px;
-        cursor: pointer;
-      }
-    }
-
-    .images-section {
-      width: 120%;
-      height: 100vh;
-
-      img {
-        border-radius: 25px 0 0 25px;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
+    
   }
 }
 
 // QUERY PARAMS
 
 @media screen and (max-width: 800px) {
-  .projects {
+  .projectsResponsive {
     margin: 0 5%;
     margin-bottom: 15vh;
 
