--- a/compa-webpage/src/styles/components/_carousel.scss
+++ b/compa-webpage/src/styles/components/_carousel.scss
@@ -41,7 +41,7 @@
 .carrusel-item {
     border-radius: 15px;
     flex: 0 0 auto;
-    width: 30vw;
+    // width: 30vw;
     background: white;
     margin: 20px;
 }
