--- a/compa-webpage/src/styles/components/_allies.scss
+++ b/compa-webpage/src/styles/components/_allies.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: #52D766;
   padding-top: 7vh;
-  border-radius: 0 200px 0 0;
+  // border-radius: 0 200px 0 0;
 
   h2 {
     font-size: 80px;
@@ -24,7 +24,7 @@
 
 @media screen and (max-width: 800px) {
   .allies {
-    border-radius: 0 50px 0 0;
+    // border-radius: 0 50px 0 0;
     padding-top: 3vh;
     h2 {
       font-size: 40px
