--- a/compa-webpage/src/styles/components/_services.scss
+++ b/compa-webpage/src/styles/components/_services.scss
@@ -42,7 +42,7 @@
       justify-content: start;
       align-items: center;
 
-      height: 45vh;
+      // height: 45vh;
       padding: 2%;
       text-align: center;
 
