--- a/compa-webpage/src/styles/components/_title.scss
+++ b/compa-webpage/src/styles/components/_title.scss
@@ -1,5 +1,5 @@
 .title {
-  height: 90vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,6 +35,7 @@
     .animated-text {
       font-size: 50px;
       padding-left: 5%;
+      margin: 10% 0;
       align-content: center;
     }
   }
