--- a/compa-webpage/src/styles/styles.scss
+++ b/compa-webpage/src/styles/styles.scss
@@ -19,6 +19,48 @@ ul {
     font-size: 60px;
 }
 
+html:not([data-scroll='0']) {
+    .formButton {
+        display: block;
+    }
+}
+
+.formButton {
+    text-decoration: none;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+    background-color: rgb(82, 215, 102, 0.8);
+    color: white;
+    padding: 2%;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    transition: transform .2s; /* Animation */
+    animation: slideUp 0.5s ease-out forwards;
+}
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.formButton:hover {
+    transform: scale(1.5);
+    background-color: rgb(82, 215, 102);
+}
+
 // Components
 @import './components/allies';
 @import './components/cards';
